[package]
name = "dlprotoc"
version = "0.1.0"
edition = "2021"

[dependencies]
# attempt to shrink dependencies a bit
reqwest = { version = "0", features = ["blocking"] }
sha2 = { version = "0", default-features = false }
zip = { version = "2", default-features = false, features = ["deflate"] }
hex-literal = "0"

[dev-dependencies]
tempfile = "3"
