[package]
edition = "2024"
name = "dlprotoc"
# The version is the crate version + protoc version
version = "0.4.5+31.1"
description = "Downloads protoc Protocol Buffers compiler for Cargo builds"
homepage = "https://github.com/evanj/dlprotoc-rs"
readme = "README.md"
keywords = [
    "protobuf",
    "serialization",
    "protoc",
    "prost",
    "tonic",
]
categories = [
    "development-tools::build-utils",
    "encoding",
]
license = "MIT"
repository = "https://github.com/evanj/dlprotoc-rs"

[lints.clippy]
nursery = "deny"
pedantic = "deny"
style = "deny"
cargo = "deny"
option-if-let-else =  { level = "allow", priority = 1 }
multiple-crate-versions = { level = "allow", priority = 1 }

[dependencies]
# attempt to shrink dependencies
reqwest = { version = "0", default-features = false, features = ["http2", "default-tls", "blocking"] }
sha2 = { version = "0", default-features = false }
zip = { version = "4", default-features = false, features = ["deflate"] }
hex-literal = "1"

[dev-dependencies]
# prost-build needed to compile the crate doctest
prost-build = { version = "0", default-features = false }
tempfile = "3"
